# Test-task

./: CMakeLists.txt  README.md  array_template.cpp.in  toolchain.cmake
